# simple-price-alerts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/worker/: Cargo.toml  __init__.py  domain.py  events.py  idempotency.py  providers.py  service.py  telegram.py  use_cases.py
apps/worker/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  model.rs  ports.rs
crates/application/src/ports/: mod.rs
crates/application/src/use_cases/: dispatch_telegram_alert.rs  list_watched_symbols.rs  mod.rs  process_price_tick.rs  search_symbol.rs  select_watch_symbol.rs  tests.rs  upsert_alert_rule.rs
crates/application/tests/: e2e_smoke.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: aggregates.rs  error.rs  lib.rs  value_objects.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  ports.rs
crates/infrastructure/src/adapters/: mod.rs
crates/infrastructure/src/adapters/http/: mod.rs  vn_stock_api.rs
crates/infrastructure/src/adapters/telegram/: mod.rs  telegram_bot.rs
crates/infrastructure/src/outbox/: publisher.rs
crates/infrastructure/src/persistence/: mapper.rs  mod.rs  postgres_repositories.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
migrations/: 20260228170500_create_alert_monitoring_schema.sql
scripts/: ensure_skills.py
skills/rust-stock-alert-bootstrap/: SKILL.md
skills/rust-stock-alert-bootstrap/references/: roadmap.md  testing-checklist.md
src/: main.rs
tests/: test_worker.py
