[package]
name = "api"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }
contracts = { path = "../../crates/contracts" }
shared = { path = "../../crates/shared" }
tokio.workspace = true
tracing.workspace = true
