[package]
name = "worker"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }
shared = { path = "../../crates/shared" }
tokio.workspace = true
tracing.workspace = true
