[package]
name = "adapters"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio.workspace = true
