[package]
name = "application"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
contracts = { path = "../contracts" }
shared = { path = "../shared" }
async-trait.workspace = true
thiserror.workspace = true
