[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
